# prompt-cache

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  benchmark_memcpy.py  cache_engine.py  conversation.py  cpu_profile.txt  dataset_download.py  demo.py  eval.py  eval_acc.py  eval_acc.slurm  eval_all.py  eval_sys.py  eval_sys_a100-7b-cpu.slurm  eval_sys_a100-7b-gpu.slurm  eval_sys_a40-7b-cpu.slurm  eval_sys_a40-7b-gpu.slurm  g.sh  get_scores.py  inference.py  main.py  main_longbench.py  metrics.py  model_download.py  plot.ipynb  plot.py  prompt.py  pyproject.toml  requirements.txt  schema.py  score.py  test.py  test_benchmark.py
benchmark/: .gitignore  benchmark_base.py  dataset_download.py  eval.py  longbench.py  metrics.py  ms_marco_v1_1.py  multi_news.py  profile_parser.py  prompt_mbti.xml  schema_code_generation.xml  schema_cot.xml  schema_industrial.xml  schema_marco.xml  schema_mbti.xml  schema_mbti_short.xml  schema_persona.xml  schema_persona_long.xml  schema_personalization.xml  schema_qanda.xml  schema_recommendations.xml  squad_v2.py  squadv2test.xml  utils.py
config/: dataset_maxlen.json  dataset_prompt.json  llm_config_falcon.json  llm_config_falcon_40b.json  llm_config_falcon_7b.json  llm_config_llama2.json  llm_config_llama2_13b.json  llm_config_llama2_7b.json  llm_config_longchat_7b.json  llm_config_mpt.json  llm_config_mpt_30b.json  llm_config_mpt_7b.json  llm_config_vicuna_7b.json
examples/: code_gen_cache.txt  code_gen_no_cache.txt  code_generation_bookstore.xml  code_generation_game.xml  edu_no_cache.txt  parameterized.txt  (+3 more)
(+171 files in other folders)
