[tool.poetry]
name = "promptcache"
version = "0.1.0"
description = "Modular attention cache for low-latency inference"

license = "MIT"

authors = [
    "In Gim <in.gim@yale.edu>"
]

repository = "https://github.com/yale-sys/prompt-cache"

# README file(s) are used as the package description
readme = ["README.md", "LICENSE"]

# Keywords (translated to tags on the package index)
keywords = ["packaging", "poetry"]

[tool.poetry.dependencies]
# Compatible Python versions
transformers = "4.34.0"
